--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.0'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'jacoco'
 }
 
 group = 'com.topaze'
@@ -13,10 +14,6 @@ java {
 	}
 }
 
-springBoot {
-	mainClass = ' com.topaze.demo.VenteVoitureApplication'
-}
-
 repositories {
 	mavenCentral()
 }
@@ -25,7 +22,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 	testImplementation 'org.junit.platform:junit-platform-suite-engine:1.10.2'
 }
 
