--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,37 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.9'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.springframework.boot' version '3.3.0'
+	id 'io.spring.dependency-management' version '1.1.5'
 	id 'jacoco'
 }
 
-
-group = 'com.example'
+group = 'com.topaze'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(17)
+	}
+}
+
+springBoot{
+	mainClass = 'com.topaze.demo.PaulineApplicationTests'
+
+}
 
 repositories {
 	mavenCentral()
 }
 
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.junit.platform:junit-platform-suite-engine:1.10.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+	testImplementation 'org.junit.platform:junit-platform-suite-engine:1.10.2'
 }
 
 tasks.named('test') {
